--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "primeicons": "^7.0.0",
+    "primevue": "^3.53.0",
     "vue": "^3.4.37"
   },
   "devDependencies": {
